# 01-bias-audit

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt
config/: config.yaml  configuration.py
data/processed/: clean.csv
outputs/metrics/: bias_report.json  metrics.json
outputs/model/: config.json
research/: data_ingestion.ipynb  evaluation.ipynb  prepare_base_model.ipynb
src/: __init__.py
src/components/: data_ingestion.py  evaluation.py  prepare_base_model.py  report.py  visualize.py
src/config/: config.yaml  configuration.py
src/constants/: __init__.py
src/pipeline/: predict.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_evaluation.py  stage_04_report.py
src/utils/: __init__.py  common.py
templates/: index.html
